--- a/Domain.html
+++ b/Domain.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bro Code</title>
-    <link rel="stylesheet" href="Regine Domain.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -44,4 +44,5 @@ Penjelasan : Nama ini berada tepat setelah TLD, khususnya untuk yang berkaitan d
 Penjelasan : Dengan subdomain, para webmaster tidak harus membeli nama tambahan jika ingin menambahkan pembagian di situsnya. Mereka cukup membuat subdomain yang bisa diarahkan ke direktori tertentu di server. Subdomain bisa menjadi opsi terbaik utuk situs campaign dan tipe konten web lainnya yang sebaiknya terpisah dari halaman atau situs utama.
 Sebagai contoh, Facebook menggunakan developers.facebook.com untuk menyediakan informasi tertentu kepada para developer web dan developer aplikasi yang ingin memanfaatkan API Facebook. Contoh lainnya adalah support.google.com.</p>
 </body>
+
 </html>
