--- a/Ekstensi Domain.html
+++ b/Ekstensi Domain.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bro Code</title>
-    <link rel="stylesheet" href="Regine Domain.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -53,4 +53,5 @@ Penjelasan :  Ekstensi yang lebih baru dan lebih spesifik untuk niche tertentu.<
 <p>(b). .store: Untuk toko online.</p>
 <p>(c). .blog: Untuk blog.</p>
 </body>
+
 </html>
