Update Hosting dan domain.html

--- a/Hosting dan domain.html
+++ b/Hosting dan domain.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bro Code</title>
-    <link rel="stylesheet" href="Regine Domain.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -41,4 +41,5 @@
 <p>(D). InMotion Hosting : Pilihan populer lainnya untuk hosting.</p>
 <p>Contohnya : (https://www.inmotionhosting.com)</p>
 </body>
+
 </html>
