--- a/Hosting.html
+++ b/Hosting.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bro Code</title>
-    <link rel="stylesheet" href="Regine Domain.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -36,3 +36,4 @@
 <p>(d). Cloud Hosting: fleksibel dan mudah ditingkatkan kapasitasnya.</p>
 </body>
 </html>
+
